add test code